Bug 1985875 - Newtab multiple images incorrectly rendered per card in sections layout when on small viewport r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D263002

--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -5095,6 +5095,12 @@ main section {
   grid-gap: var(--space-large);
   grid-template-columns: repeat(1, 300px);
 }
+.ds-section-grid.ds-card-grid .ds-image.image-2, .ds-section-grid.ds-card-grid .ds-image.image-3, .ds-section-grid.ds-card-grid .ds-image.image-4 {
+  display: none;
+}
+.ds-section-grid.ds-card-grid .ds-image.image-1 {
+  display: block;
+}
 @media (min-width: 610px) {
   .ds-section-grid.ds-card-grid .col-1-position-0 {
     order: 0;
@@ -5455,14 +5461,6 @@ main section {
 @media (min-width: 610px) {
   .ds-section-grid.ds-card-grid .col-1-hide-excerpt .meta .info-wrap .excerpt {
     display: none;
-  }
-}
-@media (min-width: 610px) {
-  .ds-section-grid.ds-card-grid .ds-image.image-2, .ds-section-grid.ds-card-grid .ds-image.image-3, .ds-section-grid.ds-card-grid .ds-image.image-4 {
-    display: none;
-  }
-  .ds-section-grid.ds-card-grid .ds-image.image-1 {
-    display: block;
   }
 }
 @media (min-width: 724px) {
